Added mega integration test
Signed-off-by: mariano.barcia <mariano.barcia@gmail.com>